# atlas-log-analyzer

./: Dockerfile  README.md  pyproject.toml
atlas_log_analyzer/: __init__.py  __main__.py  patterns.py
tests/: test_log_analyzer.py  test_main.py
