[project]
name = "atlas-log-analyzer"
version = "0.1.0"
description = "Runtime Log Analysis Engine for PipelineAtlas"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "atlas-sdk",
    "redis>=5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "strict"
