[project]
name = "atlas-log-analyzer"
version = "0.1.0"
description = "Runtime Log Analysis Engine for PipelineAtlas"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "atlas-sdk",
    "redis>=5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
